--- a/wallet/src/UI/styles/form-design.css
+++ b/wallet/src/UI/styles/form-design.css
@@ -124,10 +124,36 @@ body, html {
   bottom: 10%;
   left: 50%;
   transform: translateX(-50%);
+  padding: 15px;
+  background-color: hsl(181, 60%, 39%);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  width: 34%;
+  text-align: center;
 }
 
 .add-card-link:hover {
-  background-color: #f0f0f0;
+  background-color: #19655e;
+}
+
+button[type="submit"] {
+  width: 100%;
+  padding: 15px;
+  background-color: hsl(181, 60%, 39%);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+button[type="submit"]:hover {
+  background-color: #19655e;
 }
 
 header {
@@ -148,6 +174,27 @@ header h1 {
 }
 
 
+.inactive {
+  margin-bottom: -15rem;
+}
+
+.card-remove-btn {
+  position: absolute;
+  bottom: -0.1px;
+  right: -100px;
+  padding: 10px 20px;
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.card-remove-btn:hover {
+  background-color: darkred;
+}
+
+
 @media (max-width: 768px) {
   .card-preview {
     max-width: 85%;
@@ -161,5 +208,9 @@ header h1 {
 
   .card-form-container {
     width: 95%;
+  }
+  
+  .add-card-link{
+    width: 80%;
   }
 }
